[project]
name = "media_downloader"
version = "0.1.0"
description = "Download Media from the web"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "spotdl",
    "yt-dlp",
    "python-dotenv",
    "requests",]   

[project.scripts]
media_downloader = "media_downloader.downloader:main_entry"